<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insira_seu_nome" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imgUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo" />

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />

        <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_suas_prefer_ncias" />

    <CheckBox
        android:id="@+id/ckbLivros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livros" />

    <CheckBox
        android:id="@+id/ckbEsportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esportes" />

    <CheckBox
        android:id="@+id/ckbPraia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/praia" />

    <CheckBox
        android:id="@+id/ckbEstudar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estudar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado" />

    <Spinner
        android:id="@+id/spnEstados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estado" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sair" />


</LinearLayout>